syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example";
option java_outer_classname = "ServiceProto";

package com.example;

service TestService {

  rpc reply (Request) returns (Response) {}

  rpc serverStream (Request) returns (stream Response) {}

  rpc clientStream (stream Request) returns (Response) {}

  rpc bidiStream (stream Request) returns (stream Response) {}
}

message Request {
  int64 timestamp = 1;
}

message Response {
  int64 timestamp = 1;
}
